tests/cases/should_fail/types/incomplete_tuple_literal_name_assignment.hash
// run=fail, stage=parse

k : (str, bar: u8) -> u32 = (k = ); // Error here (should report that there should be an expression)
