tests/cases/should_fail/types/incomplete_tuple_literal_name_assignment.stderr
error: expected an expression
 --> $DIR/incomplete_tuple_literal_name_assignment.hash:3:33
2 |   
3 |   k : (str, bar: u8) -> u32 = (k = ); // Error here (should report that there should be an expression)
  |                                   ^ here
